--- a/FormGenerator/Components/Layout/MainLayout.razor
+++ b/FormGenerator/Components/Layout/MainLayout.razor
@@ -1,23 +1,40 @@
-﻿@inherits LayoutComponentBase
+﻿@namespace FormGenerator.Components
+@inherits LayoutComponentBase
+@using MudBlazor
+@inject IDialogService DialogService
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+<MudPopoverProvider />
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+<MudLayout>
+    <MudAppBar Elevation="1">
+        <MudText Typo="Typo.h5" Class="ml-3">Dynamic Form Generator</MudText>
+        <MudSpacer />
+        <MudTooltip Text="About">
+            <MudIconButton Icon="@Icons.Material.Filled.Info"
+                           Color="Color.Inherit"
+                           Edge="Edge.End"
+                           OnClick="OpenAboutDialog" />
+        </MudTooltip>
+    </MudAppBar>
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.Large" Class="my-4 pt-4">
             @Body
-        </article>
-    </main>
-</div>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+@code {
+    private void OpenAboutDialog()
+    {
+        var options = new DialogOptions
+            {
+                CloseOnEscapeKey = true,
+                MaxWidth = MaxWidth.Small
+            };
+
+        DialogService.ShowAsync<AboutDialog>(string.Empty, options);
+    }
+}
