--- a/FormGenerator/Components/Routes.razor
+++ b/FormGenerator/Components/Routes.razor
@@ -1,6 +1,19 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
+﻿@using Microsoft.AspNetCore.Components.Routing
+
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(FormGenerator.Components.MainLayout)" />
+        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <PageTitle>Not found</PageTitle>
+        <LayoutView Layout="@typeof(FormGenerator.Components.MainLayout)">
+            <div class="d-flex flex-column align-center justify-center mt-4">
+                <h3>Sorry, there's nothing at this address.</h3>
+                <a href="/" class="mud-button-root mud-button mud-button-filled mud-button-filled-primary mud-button-filled-size-medium mud-ripple">
+                    Return Home
+                </a>
+            </div>
+        </LayoutView>
+    </NotFound>
 </Router>
