--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -32,6 +32,6 @@
                 MaxWidth = MaxWidth.Small
             };
 
-        DialogService.Show<AboutDialog>(string.Empty, options);
+        DialogService.ShowAsync<AboutDialog>(string.Empty, options);
     }
 }
