--- a/Components/CustomValidation/FormValidator.razor
+++ b/Components/CustomValidation/FormValidator.razor
@@ -4,9 +4,9 @@
 
 @code {
     [CascadingParameter]
-    private EditContext CurrentEditContext { get; set; }
+    private EditContext CurrentEditContext { get; set; } = default!;
 
-    private ValidationMessageStore messageStore;
+    private ValidationMessageStore? messageStore;
 
     protected override void OnInitialized()
     {
@@ -24,21 +24,25 @@
     }
 
     // When the form requests validation
-    private void OnValidationRequested(object sender, ValidationRequestedEventArgs args)
+    private void OnValidationRequested(object? sender, ValidationRequestedEventArgs args)
     {
-        messageStore.Clear();
-        ValidateModel((FormModel)CurrentEditContext.Model);
+        messageStore?.Clear();
+        if (CurrentEditContext != null)
+        {
+            ValidateModel((FormModel)CurrentEditContext.Model);
+        }
     }
 
     // When a field changes
-    private void OnFieldChanged(object sender, FieldChangedEventArgs args)
+    private void OnFieldChanged(object? sender, FieldChangedEventArgs args)
     {
         // Clear validation for the field that changed
-        messageStore.Clear(args.FieldIdentifier);
+        messageStore?.Clear(args.FieldIdentifier);
 
         // Revalidate the specific field
         ValidateField(args.FieldIdentifier);
     }
+
 
     private void ValidateModel(FormModel model)
     {
@@ -47,8 +51,8 @@
         {
             if (dropdown.IsRequired && string.IsNullOrWhiteSpace(dropdown.SelectedValue))
             {
-                var fieldIdentifier = FieldIdentifier.Create(() => dropdown.SelectedValue);
-                messageStore.Add(fieldIdentifier, $"{dropdown.Label} is required");
+                var fieldIdentifier = new FieldIdentifier(dropdown, nameof(DropdownField.SelectedValue));
+                messageStore?.Add(fieldIdentifier, $"{dropdown.Label} is required");
             }
         }
 
@@ -57,8 +61,8 @@
         {
             if (checkbox.IsRequired && !checkbox.IsChecked)
             {
-                var fieldIdentifier = FieldIdentifier.Create(() => checkbox.IsChecked);
-                messageStore.Add(fieldIdentifier, $"{checkbox.Label} must be checked");
+                var fieldIdentifier = new FieldIdentifier(checkbox, nameof(CheckboxField.IsChecked));
+                messageStore?.Add(fieldIdentifier, $"{checkbox.Label} must be checked");
             }
         }
 
@@ -67,8 +71,8 @@
         {
             if (field.IsRequired && string.IsNullOrWhiteSpace(field.Value))
             {
-                var fieldIdentifier = FieldIdentifier.Create(() => field.Value);
-                messageStore.Add(fieldIdentifier, $"{field.Label} is required");
+                var fieldIdentifier = new FieldIdentifier(field, nameof(InputField.Value));
+                messageStore?.Add(fieldIdentifier, $"{field.Label} is required");
             }
         }
 
@@ -87,7 +91,7 @@
 
         if (dropdown != null && dropdown.IsRequired && string.IsNullOrWhiteSpace(dropdown.SelectedValue))
         {
-            messageStore.Add(fieldIdentifier, $"{dropdown.Label} is required");
+            messageStore?.Add(fieldIdentifier, $"{dropdown.Label} is required");
         }
 
         // Check if the field is a checkbox's IsChecked
@@ -97,7 +101,7 @@
 
         if (checkbox != null && checkbox.IsRequired && !checkbox.IsChecked)
         {
-            messageStore.Add(fieldIdentifier, $"{checkbox.Label} must be checked");
+            messageStore?.Add(fieldIdentifier, $"{checkbox.Label} must be checked");
         }
 
         // Notify validation state changed
@@ -106,11 +110,7 @@
 
     public void DisplayErrors(Dictionary<string, List<string>> errors)
     {
-        if (CurrentEditContext != null)
-        {
-            // You could add additional custom validation messages here if needed
-            CurrentEditContext.NotifyValidationStateChanged();
-        }
+        CurrentEditContext?.NotifyValidationStateChanged();
     }
 
     public void ClearErrors()
