--- a/Components/Pages/DynamicForm.razor
+++ b/Components/Pages/DynamicForm.razor
@@ -57,8 +57,8 @@
     /// Path to JSON form definition
     /// </summary>
 
-    //private const string JsonFilePath = "formConfig.json";
-    private const string JsonFilePath = "expandedFormConfig.json";
+    private const string JsonFilePath = "formConfig.json";
+    //private const string JsonFilePath = "expandedFormConfig.json";
 
     private FormValidator? formValidator;
     private bool isLoading = true;
